# tutorial-langchain

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/chapter_6/: create_hybrid_rag_chain.py  create_hyde_rag_chain.py  create_multi_query_rag_chain.py  create_query_generation_chain.py  create_rag_chain.py  create_rag_fusion_chain.py  create_rerank_rag_chain.py  create_route_rag_chain.py  get_chroma_database.py  get_git_documents.py  read_official_documents.py
src/chapter_7/: create_client_and_dataset.py  evalute.py  generate_testdataset.py  get_git_documents.py  rag_application.py  ragas_matric_evaluter.py  save_testdataset.py
src/chapter_9/: build_workflow.py  invoke_workflow.py
src/chapter_9/model/: judgement.py  llm_instance.py  roles.py  state.py
src/chapter_9/node/: answering_node.py  check_node.py  selection_node.py
