[project]
name = "tutorial-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "decorator==4.4.2",
    "faiss-cpu==1.8.0.post1",
    "gitpython==3.1.43",
    "langchain-anthropic==0.2.0",
    "langchain-chroma>=0.1.4",
    "langchain-cohere==0.3.0",
    "langchain-community==0.3.0",
    "langchain-core==0.3.0",
    "langchain-openai==0.2.0",
    "langgraph==0.2.22",
    "langgraph-checkpoint==1.0.11",
    "nest-asyncio==1.6.0",
    "numpy==1.26.4",
    "pydantic==2.10.6",
    "python-dotenv==1.0.1",
    "posthog>=2.4.0,<6.0.0",
    "ragas==0.1.14",
    "rank-bm25==0.2.2",
    "retry==0.9.2",
    "tavily-python==0.5.0",
    "pysdb>=0.0.3",
    "pysbd>=0.3.4",
]
